# unsupervised

./: auxiliary.py  cleaner.py  experiments.py  mc_test.py  mc_test_copy.py  pyproject.toml  run_deltas.py  run_deltas_test.py  run_diag_std.py  run_gen.py  run_gen_---.py  run_gen_1d_dreaming.py  run_gen_2d.py  run_gen_2d_comp.py  run_gen_2d_opt.py  run_gen_2d_tm.py  run_gen_2d_tmr.py  run_mags_m.py  run_spec.py  run_spec_dreaming.py  run_spec_many.py  run_t_optimal.py  runlag_1d.py  runlag_1d_p.py  runlag_gen_2d.py  runlag_gen_2d_opt.py  runlag_gen_2d_tm.py  runlag_gen_2d_tmr.py  runlag_spec.py  sep_line.py  theory.py
Data/: attraction_mc-126604800775359400587981234914707362547_inputs.json  attraction_mc-126604800775359400587981234914707362547_inputs.npz  attraction_mc-126604800775359400587981234914707362547_sample0.npz  attraction_mc-126604800775359400587981234914707362547_sample1.npz  attraction_mc-126604800775359400587981234914707362547_sample10.npz  attraction_mc-126604800775359400587981234914707362547_sample11.npz  attraction_mc-126604800775359400587981234914707362547_sample12.npz  attraction_mc-126604800775359400587981234914707362547_sample13.npz  attraction_mc-126604800775359400587981234914707362547_sample14.npz  attraction_mc-126604800775359400587981234914707362547_sample15.npz  attraction_mc-126604800775359400587981234914707362547_sample16.npz  attraction_mc-126604800775359400587981234914707362547_sample17.npz  attraction_mc-126604800775359400587981234914707362547_sample18.npz  attraction_mc-126604800775359400587981234914707362547_sample19.npz  (+14295 more)
(+833 files in other folders)
