[project]
name = "unsupervised"
version = "0.1.0"
description = ""
authors = [
    {name = "pdmWindowsOmen",email = "pdmourao@gmail.com"}
]
requires-python = "^3.12"
dependencies = [
    "laboratory @ git+https://github.com/pdmourao/laboratory.git",
    "tqdm (>=4.67.1,<5.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
