[tool.poetry]
name = "unsupervised"
version = "0.1.0"
description = ""
authors = ["pdmWindowsOmen <pdmourao@gmail.com>"]
readme = "README.md"
packages = [{ include = "unsupervised" }]

[tool.poetry.dependencies]
python = "^3.12"
laboratory = { git = "https://github.com/pdmourao/laboratory.git" }
tqdm = ">=4.67.1,<5.0.0"
matplotlib = ">=3.10.8,<4.0.0"
scipy = "^1.17.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
